# key-generator

./: Cargo.toml
app/: Cargo.toml  build.rs
app/src/: main.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
